perl (5.20.1-1) UNRELEASED; urgency=medium

  * New upstream release
  * [SECURITY] CVE-2014-4330: don't recurse infinitely in Data::Dumper
    (Closes: #762256) 
  * Update Standards-Version (no changes)

 -- Dominic Hargreaves <dom@earth.li>  Mon, 15 Sep 2014 00:06:30 +0100

perl (5.20.1~rc2-1) experimental; urgency=low

  * New upstream release candidate

 -- Dominic Hargreaves <dom@earth.li>  Sun, 07 Sep 2014 18:42:23 +0100

perl (5.20.1~rc1-1) experimental; urgency=low

  * New upstream release candidate
  * Don't skip dist/threads/t/stack.t on GNU/Hurd as Hurd now has
    support for varying stack length sizes (Closes: #650175)
  * Disable failing test in t/io/socket.t on GNU/Hurd (see: #758718)
  * Modify $Config{libperl} to avoid exposing the full version
    (Closes: #759989)
  * Ensure that all manpage directories are installed with
    appropriate permissions, fixing Lintian warnings
  * Support POD_MAN_DATE in Pod::Man for the left-hand footer to
    help with reproducible builds; thanks to Russ Allbery
    (Closes: #759405)

 -- Dominic Hargreaves <dom@earth.li>  Sun, 31 Aug 2014 18:17:29 -0700

perl (5.20.0-6) unstable; urgency=medium

  * Explicitly set mode of DEBIAN/conffiles to fix a Lintian error
    in certain build environments

 -- Dominic Hargreaves <dom@earth.li>  Fri, 29 Aug 2014 21:32:22 -0700

perl (5.20.0-5) unstable; urgency=medium

  [ Niko Tyni ]
  * Fix visible escape sequences in perldoc output by passing the "-R"
    option to the "less" pager. (Closes: #758689)
  * Pass explicit LD settings through to subdirectories again even if
    the build system sets LD. (Closes: #758471)
  * Drop the libcgi-fast-perl binary package, which is moving to
    a source package of its own. (Closes: #759187)

  [ Dominic Hargreaves ]
  * Note simplified developer tools requirements

 -- Dominic Hargreaves <dom@earth.li>  Thu, 28 Aug 2014 21:25:34 -0700

perl (5.20.0-4) unstable; urgency=medium
